--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,15 +1,10 @@
 [package]
-name = "perstai"
+name = "hello-world"
 version = "0.1.0"
 edition = "2021"
-publish = false
 
 [dependencies]
-apalis = { version = "0.4.9", features = ["cron", "postgres", "extensions", "retry"] }
-chrono = { version = "0.4.32", features = ["clock", "serde"] }
-serde = { version = "1.0.195", features = ["derive"] }
-shuttle-runtime = "0.37.0"
-shuttle-shared-db = { version = "0.37.0", features = ["postgres"] }
-sqlx = { version = "0.7.3", features = ["runtime-tokio-native-tls", "postgres"] }
-tokio = "1"
-tower = { version = "0.4.13" }
+axum = "0.7.3"
+shuttle-axum = "0.46.0"
+shuttle-runtime = "0.46.0"
+tokio = "1.28.2"
